--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,11 +119,6 @@
         height: 36px;
         transition: 0.3s;
     }
-  .cont {
-        margin-top: 70px;
-        color: white;
-    }
-    
     
     #header .profile .social-links a:hover {
         background: #149ddd;
@@ -141,6 +136,12 @@
         }
         #main {
             margin-left: 0;
+        }
+    }
+    
+    @media screen and (max-width: 497px) {
+        .resHide {
+            display: none;
         }
     }
     
